--- a/papertrade_website/myapp/templates/base.html
+++ b/papertrade_website/myapp/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,22 +10,23 @@
         Django App
       {% endblock %}
     </title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"  rel="stylesheet" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">My Django App</a>
+      <a class="navbar-brand" href="#"><img src="{% static 'logo.png' %}" alt="Logo" style="height: 50px; margin-right: 20px; margin-left: 20px;">
+        Paper Paradise</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
+      <div class="collapse navbar-collapse" id="navbarNav" style="margin-right: 20px;">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item {% if request.path == '/login/' or request.path == '/' %}active{% endif %} ml-3">
+            <a class="nav-link" href="/login/">Login</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+          <li class="nav-item {% if request.path == '/about/' %}active{% endif %} ml-3">
+            <a class="nav-link" href="/about/">About</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+          <li class="nav-item {% if request.path == '/contact/' %}active{% endif %} ml-3">
+            <a class="nav-link" href="/contact/">Contact</a>
           </li>
         </ul>
       </div>
