--- a/papertrade_website/navbarapp/templates/base.html
+++ b/papertrade_website/navbarapp/templates/base.html
@@ -14,13 +14,13 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#"><img src="{% static 'logo.png' %}" alt="Logo" style="height: 50px; margin-right: 20px; margin-left: 20px;">
+      <a class="navbar-brand" href="/login/"><img src="{% static 'logo.png' %}" alt="Logo" style="height: 50px; margin-right: 20px; margin-left: 20px;">
         Paper Paradise</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarNav" style="margin-right: 20px;">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item {% if request.path == '/login/' or request.path == '/' %}active{% endif %} ml-3">
-            <a class="nav-link" href="/login/">Login</a>
+          <li class="nav-item {% if request.path == '/home/' %}active{% endif %} ml-3">
+            <a class="nav-link" href="/home/">Home</a>
           </li>
           <li class="nav-item {% if request.path == '/about/' %}active{% endif %} ml-3">
             <a class="nav-link" href="/about/">About</a>
