--- a/papertrade_website/authapp/templates/login.html
+++ b/papertrade_website/authapp/templates/login.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %} {% block title %} Login {% endblock %}
-{% block content %}
+{% extends "base.html" %} {% block title %} Login {% endblock %} {% block
+content %}
 
 <div class="container">
     <div class="row justify-content-center">
@@ -7,21 +7,38 @@
             <div class="my-auto">
                 <div class="flex-container" style="width: fit-content; margin-left: auto; margin-right: auto">
                     <h6>Welcome back to</h6>
-                    <h1 style="text-align: center; color: #FFE07D;">Paper Paradise</h1>
+                    <h1 style="text-align: center; color: #ffe07d">Paper Paradise</h1>
                 </div>
-                <div class="flex-container" style="margin-left: auto; margin-right: auto; border: 2px solid #FFE07D; border-radius: 20px; height: 350px; width: 500px;">
-                    <div class="d-flex flex-column justify-content-center w-100 h-100" style="padding-left: 30px; padding-right: 30px;">
-                        <p>Username</p>
-                        <input type="text" class="form-control" placeholder="Username or email">
-                        <p>Password</p>
-                        <input type="password" class="form-control" placeholder="Password">
-                        <div class="border" style="width: 300px; margin-left: auto; margin-right: auto; margin-top: 30px; margin-bottom: 30px;"></div>
-                        <a class="btn w-100" style="background-color: #FFE07D;" type="submit" href="/home/">Log in</a>
+                <div class="flex-container" style="
+                    margin-left: auto;
+                    margin-right: auto;
+                    border: 2px solid #ffe07d;
+                    border-radius: 20px;
+                    height: 350px;
+                    width: 500px;
+                ">
+                    <div class="d-flex flex-column justify-content-center w-100 h-100"
+                        style="padding-left: 30px; padding-right: 30px">
+                        <form class="form-group" method="POST">
+                            <p>Username</p>
+                            <input type="text" class="form-control" placeholder="Username or email" />
+                            <p>Password</p>
+                            <input type="password" class="form-control" placeholder="Password" />
+                            <div class="border" style="
+                                width: 300px;
+                                margin-left: auto;
+                                margin-right: auto;
+                                margin-top: 30px;
+                                margin-bottom: 30px;
+                                "></div>
+                            <a class="btn w-100" style="background-color: #ffe07d" type="submit" href="/home/">Log
+                                in</a>
+                        </form>
                     </div>
                 </div>
                 <div>
-                    <row class="row justify-content-center" style="margin-left: auto; margin-right: auto;">
-                        <span class="btn-text" style="margin-top: auto; margin-bottom: auto;">Are you new?</span>
+                    <row class="row justify-content-center" style="margin-left: auto; margin-right: auto">
+                        <span class="btn-text" style="margin-top: auto; margin-bottom: auto">Are you new?</span>
                         <a class="btn btn-link btn-lg text-warning" href="/signup/">Create an account</a>
                     </row>
                 </div>
