--- a/papertrade_website/authapp/templates/signup.html
+++ b/papertrade_website/authapp/templates/signup.html
@@ -8,19 +8,21 @@
             <h1 style="text-align: center; color: #FFE07D;">Paper Paradise</h1>
         </div>
         <div class="flex-container"
-        
             style="margin-left: auto; margin-right: auto; border: 2px solid #FFE07D; border-radius: 20px; height: 350px; width: 500px;">
             <div class="d-flex flex-column justify-content-center w-100 h-100"
                 style="padding-left: 30px; padding-right: 30px;">
-                <p>Username</p>
-                <input type="text" class="form-control" placeholder="Username or email">
-                <p>Password</p>
-                <input type="password" class="form-control" placeholder="Password">
-                <input type="password" class="form-control" placeholder="Confirm password">
-                <div class="border"
-                    style="width: 300px; margin-left: auto; margin-right: auto; margin-top: 30px; margin-bottom: 30px;">
-                </div>
-                <a class="btn w-100" style="background-color: #FFE07D;" type="submit" href="/home/">Sign up</a>
+                <form class="form-group" method="POST">
+                    {{form}}
+                    <p>Username</p>
+                    <input type="text" class="form-control" placeholder="Username or email">
+                    <p>Password</p>
+                    <input type="password" class="form-control" placeholder="Password">
+                    <input type="password" class="form-control" placeholder="Confirm password">
+                    <div class="border"
+                        style="width: 300px; margin-left: auto; margin-right: auto; margin-top: 30px; margin-bottom: 30px;">
+                    </div>
+                    <a class="btn w-100" style="background-color: #FFE07D;" type="submit" href="/home/">Sign up</a>
+                </form>
             </div>
         </div>
     </div>
