--- a/papertrade_website/authapp/templates/login.html
+++ b/papertrade_website/authapp/templates/login.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %} {% block title %} Login {% endblock %} {% block
-content %}
+{% extends "base.html" %} {% block title %} Login {% endblock %} 
+{% block content %}
 
 <div class="container">
     <div class="row justify-content-center">
