5/5 - Built biggest winners and losers in market API getter and basic display logic
- TODO: Build winners/losers graph, basic home UI, and news

--- a/papertrade_website/homeapp/templates/home.html
+++ b/papertrade_website/homeapp/templates/home.html
@@ -1,6 +1,21 @@
 {% extends "base.html" %} {% block title %} Home {% endblock %} 
 {% block content %}
 
-<h1>Home Page</h1>
+<!DOCTYPE html>
+<html>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="column">
+                <div class="container" style="background-color: azure;">
+                    {% for loser in losers %}
+                    <h1>Ticker: {{loser.ticker}} Change: {{loser.change_percentage}}</h1>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
 
 {% endblock %}
