--- a/papertrade_website/homeapp/templates/home.html
+++ b/papertrade_website/homeapp/templates/home.html
@@ -53,12 +53,12 @@
             <div class="row">
                 {% for article in articles %}
                 <a href="{{article.link}}">
-                    <div class="container" style="background-color: aqua;">
-                        <div class="col">
-                            <div class="container" style="width: 200px; height: 75px; border-radius: 20px;">
-                                <img src="{{article.image}}" style="width: 100%; height: 100%; object-fit: cover;">
+                    <div class="container border" style="width: 200px; margin-left: 20px; margin-right: 20px; justify-content: center;">
+                        <div class="col" style="justify-content: center;">
+                            <div class="container border" style="width: 100%; height: 100px; border-radius: 10px;">
+                                <img src="{{article.image}}" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
                             </div>
-                            <p class="title-text">{{article.title}}</p>
+                            <p class="title-text border">{{article.title}}</p>
                         </div>
                     </div>
                 </a>
