5/16 - Implemented cash data flow and displayed stock assets data on homepage
- TODO: Make invest page for users to control their cash balance and scrape stock actives

--- a/papertrade_website/homeapp/templates/home.html
+++ b/papertrade_website/homeapp/templates/home.html
@@ -38,10 +38,10 @@
     <div class="row">
         <div class="col mr-auto" style="margin-top: 10px;">
             <div class="row">
-                <h4>Your investments +</h4>
+                <h4>Your investments</h4>
             </div>
             <div class="row">
-                <h1>$10,532.15</h1>
+                <h1>${{investment_assets}}</h1>
                 <h3 style="margin-left: 10px">2.61%</h3>
                 <div class="triangle-up" style="margin-left: 5px; margin-bottom: auto;"></div>
             </div>
