--- a/papertrade_website/navbarapp/templates/base.html
+++ b/papertrade_website/navbarapp/templates/base.html
@@ -14,7 +14,9 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon.svg' %}">
   </head>
+  
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="/login/"><img src="{% static 'logo.png' %}" alt="Logo" style="height: 50px; margin-right: 20px; margin-left: 20px;">
